# waillet-mono

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  extension-ci.yml  extension-release.yml  site-pages.yml
backend/: .gitignore  docker-compose.yml  env.example  init.sql  pyproject.toml  test_ai.py  test_api.py  test_rpc_proxy.py  test_simulation.py  test_simulation_performance.py
backend-v2/: .air.toml  .env.example  .gitignore  Makefile  go.mod  go.sum
backend-v2/docker/: Dockerfile  docker-compose.yml
backend-v2/docs/: AUTHENTICATION.md  auth_diagram.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  ai.py  favorites.py  policies.py  rpc.py  simulation.py
backend/app/services/: __init__.py  ai_service.py  bridge_relayer.py  risk_service.py  scam_database.py  simulation_service.py
backend/tests/: run_tests.py  test_risk_analysis.py
dapp/: .env.example  package-lock.json  package.json
dapp-v2/: README.md  package-lock.json  package.json
dapp-v2/src/: App.tsx  index.css  vite-env.d.ts
dapp/src/: App.tsx  index.css  main.tsx
extension/: .gitignore  build-extension-scripts.js  build-firefox.js  copy-icons.js  index.html  package.json  playwright.config.ts  test-dapp.html  tsconfig.json  vite.config.ts  vitest.config.ts
extension/contracts/: .env.example  AddressRegistry.sol  DEPLOY.md  hardhat.config.ts  (+1 more)
manual-testing/: checklist.md
site/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+250 files in other folders)
